--- a/Note 1-2_Jupyter_basics.ipynb
+++ b/Note 1-2_Jupyter_basics.ipynb
@@ -248,28 +248,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
-    },
-    "tags": []
+    }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7"
+       "5"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# basic operations\n",
-    "2 + 5"
+    "2 + 3"
    ]
   },
   {
@@ -341,21 +340,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    },
-    "tags": []
+    }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'# basic operations\\n2 + 4'"
+       "'# basic operations\\n2 + 3'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,15 +524,14 @@
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    },
-    "tags": []
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dukie pookie\n"
+      "hello world\n"
      ]
     }
    ],
@@ -557,12 +554,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    },
-    "tags": []
+    }
    },
    "outputs": [],
    "source": [
@@ -571,12 +567,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    },
-    "tags": []
+    }
    },
    "outputs": [
     {
@@ -586,7 +581,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[1;32m~\\2023-fa-stats21\\script02.py:1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhello \u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m name)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIt\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms Friday!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;32m~\\OneDrive\\Teaching\\21\\2023-fa-stats21\\script02.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'hello '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"It's Friday!\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mNameError\u001b[0m: name 'name' is not defined"
      ]
     }
@@ -597,12 +592,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    },
-    "tags": []
+    }
    },
    "outputs": [
     {
@@ -656,12 +650,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    },
-    "tags": []
+    }
    },
    "outputs": [
     {
@@ -692,12 +685,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    },
-    "tags": []
+    }
    },
    "outputs": [
     {
@@ -706,7 +698,7 @@
        "27"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,46 +709,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    },
-    "tags": []
+    }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "23"
+       "25"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "_ - 4"
+    "_ - 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    },
-    "tags": []
+    }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "23"
+       "25"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
